# streamson

./: .gitignore  .gitmodules  CHANGELOG.rst  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  benchmark.yml  code-quality.yml  create-release.yml
docs/: config.toml
docs/content/: _index.md  binary.md  design.md  python.md  rust.md
docs/screencast/: screencast.sh
docs/templates/: _variables.html  index.html
examples/custom-matcher/: Cargo.toml
examples/custom-matcher/src/: main.rs
examples/serde/: Cargo.toml
examples/serde/src/: main.rs
streamson-bin/: Cargo.toml  README.md  build.rs
streamson-bin/src/: all.rs  convert.rs  docs.rs  extract.rs  filter.rs  handlers.rs  main.rs  matchers.rs  rules.rs  trigger.rs  utils.rs
streamson-bin/src/docs/: handlers.rs  matchers.rs
streamson-extra-matchers/: Cargo.toml  README.md
streamson-extra-matchers/src/: lib.rs  regex_converter.rs  regex_matcher.rs
streamson-futures/: Cargo.toml  README.md
streamson-futures/src/: lib.rs  stream.rs
streamson-generator/: Cargo.toml  README.md
streamson-generator/src/: lib.rs
streamson-lib/: Cargo.toml  README.md
streamson-lib/benches/: all.rs  basic.rs  collector.rs  convert.rs  extract.rs  filter.rs  trigger.rs
streamson-lib/src/: collector.rs  error.rs  filter.rs  handler.rs  lib.rs  matcher.rs  path.rs  strategy.rs  streamer.rs
streamson-lib/src/handler/: analyser.rs  buffer.rs  csv.rs  file.rs  group.rs  indenter.rs  indexer.rs  output.rs  println.rs  regex.rs  replace.rs  shorten.rs  unstringify.rs
streamson-lib/src/matcher/: all.rs  combinator.rs  depth.rs  regex.rs  simple.rs
streamson-lib/src/strategy/: all.rs  convert.rs  extract.rs  filter.rs  trigger.rs
streamson-python/: Cargo.toml  README.md  pyproject.toml
streamson-python/src/: lib.rs
streamson-python/streamson/: __init__.py
streamson-tokio/: Cargo.toml  README.md
streamson-tokio/src/: decoder.rs  lib.rs
