[package]
name = "streamson-bin"
version = "6.0.0"
authors = ["Stepan Henek <stepan@henek.name>"]
edition = "2018"
description = "A program which processes large JSON data."
license = "MIT"
readme = "README.md"
keywords = ["json"]
repository = "https://github.com/shenek/streamson"
categories = ["parsing", "command-line-utilities", "json"]

[features]
default = []
test = ["assert_cmd"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = "2.33"
lazy_static = "1.4"
streamson-lib = { version = "6.0.0", path = "../streamson-lib/" }
assert_cmd = { version = "~1.0.1", optional = true }


[[bin]]
name = "streamson-bin-test"
required-features = ["test"]
