[package]
name = "streamson-bin"
version = "7.0.1"
authors = ["Stepan Henek <stepan@henek.name>"]
edition = "2018"
description = "A program which processes large JSON data."
license = "MIT"
readme = "README.md"
keywords = ["json"]
repository = "https://github.com/shenek/streamson"
categories = ["parsing", "command-line-utilities"]

[features]
default = []
test = ["assert_cmd", "predicates"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = "3.0.0-beta"
clap_generate = "3.0.0-beta"
lazy_static = "1.4"
streamson-lib = { version = "7.0.1", path = "../streamson-lib/" }
assert_cmd = { version = "~1.0.1", optional = true }
predicates = { version = "~1.0.7", optional = true }


[[bin]]
bench = false
path = "src/main.rs"
name = "sson"

[[bin]]
name = "streamson-bin-test"
required-features = ["test"]
