[package]
name = "streamson-extra-matchers"
version = "5.0.2"
authors = ["Stepan Henek"]
edition = "2018"
description = "Extra matchers for streamson library"
license = "MIT"
readme = "README.md"
keywords = ["json"]
repository = "https://github.com/shenek/streamson"
categories = ["parsing"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["with_regex"]
with_regex = ["regex"]

[dependencies]
regex = { version = "1", optional = true }
streamson-lib = { version = "5.0.2", path = "../streamson-lib/" }
