[package]
name = "streamson-futures"
version = "6.2.0"
authors = ["Stepan Henek <stepan@henek.name>"]
edition = "2018"
description = "A library which integrates streamson with futures stream"
license = "MIT"
readme = "README.md"
keywords = ["json", "futures"]
repository = "https://github.com/shenek/streamson"
categories = ["parsing"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bytes = "0.5"
futures = "~0.3.5"
streamson-lib = { version = "6.2.0", path = "../streamson-lib/" }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"]  }
