[package]
name = "streamson-generator"
version = "7.0.1"
authors = ["Stepan Henek <stepan@henek.name>"]
edition = "2018"
description = "A library which integrates streamson with generators"
license = "MIT"
readme = "README.md"
keywords = ["json", "generator"]
repository = "https://github.com/shenek/streamson"
categories = ["parsing"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
streamson-lib = { version = "7.0.1", path = "../streamson-lib/" }
