[package]
name = "streamson-lib"
version = "6.2.0"
authors = ["Stepan Henek"]
edition = "2018"
description = "Library for processing large JSONs"
license = "MIT"
readme = "README.md"
keywords = ["json"]
repository = "https://github.com/shenek/streamson"
categories = ["parsing"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]

[dev-dependencies]
tempfile = "3.1"
criterion = "~0.3.3"

[lib]
bench = false

[[bench]]
name = "trigger"
harness = false

[[bench]]
name = "filter"
harness = false

[[bench]]
name = "extract"
harness = false
