[package]
name = "streamson-lib"
version = "7.0.1"
authors = ["Stepan Henek"]
edition = "2018"
description = "Library for processing large JSONs"
license = "MIT"
readme = "README.md"
keywords = ["json"]
repository = "https://github.com/shenek/streamson"
categories = ["parsing"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["with_regex"]
with_regex = ["regex", "sedregex"]

[dependencies]
regex = { version = "1", optional = true }
sedregex = { version = "~0.2.4", optional = true }

[dev-dependencies]
tempfile = "3.1"
criterion = "~0.3.3"
rstest = "~0.6.4"

[lib]
bench = false

[[bench]]
name = "trigger"
harness = false

[[bench]]
name = "filter"
harness = false

[[bench]]
name = "extract"
harness = false
