[package]
name = "streamson-tokio"
version = "6.2.0"
authors = ["Stepan Henek"]
edition = "2018"
description = "Tokio and streamson integration library"
license = "MIT"
readme = "README.md"
keywords = ["json", "tokio"]
repository = "https://github.com/shenek/streamson"
categories = ["parsing"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bytes = "0.5"
streamson-lib = { version = "6.2.0", path = "../streamson-lib/" }
tokio-util = { version = "0.4", features = ["codec"] }

[dev-dependencies]
tokio = { version = "0.3", features = ["full"]  }
